# Assesment2

./: CMakeLists.txt  README.md  account.cpp  account.h  account.ui  adminlogin.cpp  adminlogin.h  adminlogin.ui  events.cpp  events.h  events.ui  home.cpp  home.h  home.ui  main.cpp  notes.cpp  notes.h  notes.ui  productivityapp.cpp  productivityapp.h  productivityapp.ui  studentlist.cpp  studentlist.h  studentlist.ui  tasks.cpp  tasks.h  tasks.ui  users.h
